Fixes to be Pushed to DEV Branch

--- a/force-app/main/default/classes/TreeLocationControllerTest.cls
+++ b/force-app/main/default/classes/TreeLocationControllerTest.cls
@@ -41,5 +41,9 @@ public with sharing class TreeLocationControllerTest
         // The second line shows is a little shortcut
         //TreeLocationController.getTreeLocations(treePlantation.ID);
         TreeLocationController.getTreeLocations('JustGetTheTest'); 
+        
+        
+        // NEW feature Added from the DEV so it can get all the way to PROD
+        System.debug('Greetings my friend'); 
     }
 }
